# edc-s3-dataplane

./: .dockerignore  .gitignore  Dockerfile  README.manual.md  README.md  docker-compose.manual.yml  docker-compose.yml  pyproject.toml
docs/: README.md  signaling-openapi.yaml  signaling-spec-conformance-tasks.md
docs/docs/: bulk-data-transfer-technical-description.md  signaling.md
docs/docs/schemas/: DataFlowBaseMessage.schema.json  DataFlowPrepareMessage.schema.json  DataFlowResponseMessage.schema.json  DataFlowStartMessage.schema.json  DataFlowStartedNotificationMessage.schema.json  DataFlowStatusResponseMessage.schema.json  DataFlowSuspendMessage.schema.json  DataFlowTerminateMessage.schema.json
src/simpl_bulk_dataplane/: __init__.py  bootstrap.py  config.py  main.py
src/simpl_bulk_dataplane/api/: __init__.py  dependencies.py  router.py
src/simpl_bulk_dataplane/application/: __init__.py
src/simpl_bulk_dataplane/domain/: __init__.py  callbacks.py  entities.py  errors.py  monitoring_models.py  ports.py  signaling_models.py  transfer_jobs.py  transfer_types.py
src/simpl_bulk_manual_app/: __init__.py  client.py  main.py  models.py  mqtt_events.py
tests/: test_api.py  test_bootstrap.py  test_control_plane_callback_outbox_dispatcher.py  test_control_plane_client.py  test_control_plane_notifier.py  test_dataflow_service.py  test_management_api.py  test_manual_app.py  test_s3_transfer_executor.py  test_slot_based_execution_queue.py  test_transfer_job_recovery.py
tests/e2e/: docker-compose.yml  test_transfer_resume_e2e.py
(+51 files in other folders)
