[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpl-bulk-dataplane"
version = "0.1.0"
description = "FastAPI data plane scaffold for DPS signaling and S3 push/pull transfers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "httpx>=0.27,<1",
  "boto3>=1.35,<2",
  "asyncpg>=0.29,<1",
  "paho-mqtt>=2.1,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
]

[project.scripts]
simpl-bulk-dataplane = "simpl_bulk_dataplane.main:run"
simpl-bulk-manual-ui = "simpl_bulk_manual_app.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
simpl_bulk_manual_app = ["static/*.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
  "e2e: end-to-end integration tests that require docker",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
plugins = ["pydantic.mypy"]
